--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -82,8 +82,11 @@
   .btn {
     @apply px-3 py-3 rounded-xl transition-all duration-300;
   }
+  .btn {
+    @apply px-3 py-3 rounded-xl transition-all duration-300;
+  }
   .btn--primary {
-    @apply bg-primary-900 hover:bg-primary-700 text-secondary-100;
+    @apply bg-primary-900 hover:bg-primary-700 text-primary-100;
   }
   .btn--secondary {
     @apply bg-secondary-600 text-secondary-100;
